--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^6.1.1
   firebase_storage: ^13.0.5
 
+  # font_aåwesome_flutter: 10.12.0
 
 dev_dependencies:
   flutter_test:
